--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,3 @@
-@import './mixins';
 @import './themes/default';
 
 .range-slider {
@@ -20,276 +19,11 @@
     flex-direction: row;
   }
 
-  // Axis styles
-  &__axis {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-
-  &_horizontal #{&}__axis {
-    height: max($track-thickness, $interval-thickness, $handle-height);
-  }
-
-  &_vertical #{&}__axis {
-    width: max($track-thickness, $interval-thickness, $handle-width);
-    flex-direction: column;
-  }
-
-  // Track styles
-  &__track {
-    position: absolute;
-    background: $track-bg;
-    border-radius: $track-radius;
-  }
-
-  &_horizontal #{&}__track {
-    width: 100%;
-    height: $track-thickness;
-  }
-
-  &_vertical #{&}__track {
-    width: $track-thickness;
-    height: 100%;
-  }
-
-  // Interval styles
-  &__intervals {
-    position: absolute;
-  }
-
-  &_horizontal #{&}__intervals {
-    height: $interval-thickness;
-    width: 100%;
-  }
-
-  &_vertical #{&}__intervals {
-    height: 100%;
-    width: $interval-thickness;
-  }
-
-  &__interval {
-    position: absolute;
-    background: $interval-bg;
-    border: $interval-border-width $interval-border-style $interval-border-color;
-    border-radius: $interval-radius;
-  }
-
-  &_horizontal #{&}__interval {
-    height: $interval-thickness;
-  }
-
-  &_vertical #{&}__interval {
-    width: $interval-thickness;
-  }
-
-  // Handle styles
-  &__handles {
-    position: absolute;
-  }
-
-  &_horizontal #{&}__handles {
-    width: 100%;
-    height: $handle-height;
-  }
-  &_vertical #{&}__handles {
-    width: $handle-width;
-    height: 100%;
-  }
-
-  &__handle {
-    position: absolute;
-    width: $handle-width;
-    height: $handle-height;
-    background: $handle-bg;
-    border: $handle-border-width $handle-border-style $handle-border-color;
-    border-radius: $handle-radius;
-  }
-
-  &_horizontal #{&}__handle {
-    transform: translateX(-50%);
-  }
-
-  &_vertical #{&}__handle {
-    transform: translateY(50%);
-  }
-
-  &__handle_active {
-    z-index: 1;
-    transform-origin: center;
-  }
-
-  &_horizontal #{&}__handle_active {
-    transform: translateX(-50%) scale(1.15);
-  }
-
-  &_vertical #{&}__handle_active {
-    transform: translateY(50%) scale(1.15);
-  }
-
-  // Tooltip styles
-  &__tooltips {
-    position: relative;
-  }
-
-  &_horizontal #{&}__tooltips {
-    width: 100%;
-    height: $tooltip-max-height;
-    margin-bottom: $tooltip-offset;
-  }
-
-  &_vertical #{&}__tooltips {
-    width: $tooltip-max-width;
-    height: 100%;
-    margin-right: $tooltip-offset;
-  }
-
-  &__tooltip {
-    position: absolute;
-    padding: $tooltip-padding;
-    background: $tooltip-bg;
-    border: $tooltip-border-width $tooltip-border-style $tooltip-border-color;
-    border-radius: $tooltip-radius;
-    font-size: $tooltip-font-size;
-    color: $tooltip-text-color;
-    text-align: center;
-  }
-
-  &__tooltip_has-collisions {
-    opacity: 0;
-    z-index: -10;
-  }
-
-  &_horizontal #{&}__tooltip {
-    transform: translateX(-50%);
-    max-height: $tooltip-max-height;
-    bottom: 0;
-  }
-
-  &_vertical #{&}__tooltip {
-    transform: translateY(50%);
-    max-width: $tooltip-max-width;
-    right: 0;
-  }
-
-  // Grid styles
-  &__grid {
-    position: relative;
-    display: flex;
-  }
-
-  &_horizontal #{&}__grid {
-    width: 100%;
-    margin-top: $grid-offset;
-    flex-direction: column;
-  }
-
-  &_vertical #{&}__grid {
-    height: 100%;
-    transform: translateX($grid-offset * 1.2);
-  }
-
-  &__grid-line {
-    background: $grid-line-bg;
-  }
-
-  &_horizontal #{&}__grid-line {
-    height: $grid-line-thickness;
-  }
-
-  &_vertical #{&}__grid-line {
-    width: $grid-line-thickness;
-    height: 100%;
-  }
-
-  // Grid cell styles
-  &__grid-cells {
-    position: relative;
-  }
-
-  &_horizontal #{&}__grid-cells {
-    height: $base-size * 2;
-  }
-
-  &_vertical #{&}__grid-cells {
-    width: $base-size * 3;
-    height: 100%;
-  }
-
-  &__grid-cell {
-    position: absolute;
-    background: $cell-pip-bg;
-  }
-
-  &_horizontal #{&}__grid-cell {
-    transform: translateX(-50%);
-
-    &-level-1 {
-      width: $cell-pip-max-thickness;
-      height: $cell-pip-max-size;
-
-      // move first pip inline with grid line
-      &:first-child {
-        transform: translateX(0px);
-      }
-
-      // move last pip inline with grid line
-      &:last-child {
-        transform: translateX(-$cell-pip-max-thickness);
-      }
-    }
-
-    &-level-2 {
-      width: ceil($cell-pip-max-thickness / 2);
-      height: $cell-pip-max-size - $cell-pip-max-size / 3;
-    }
-
-    &-level-3 {
-      width: ceil($cell-pip-max-thickness / 3);
-      height: $cell-pip-max-size / 3;
-    }
-  }
-
-  &_vertical #{&}__grid-cell {
-    &-level-1 {
-      width: $cell-pip-max-size;
-      height: $cell-pip-max-thickness;
-
-      // move first pip inline with grid line
-      &:first-child {
-        transform: translateY(0px);
-      }
-
-      // move last pip inline with grid line
-      &:last-child {
-        transform: translateY($cell-pip-max-thickness);
-      }
-    }
-
-    &-level-2 {
-      width: $cell-pip-max-size - $cell-pip-max-size / 3;
-      height: ceil($cell-pip-max-thickness / 2);
-    }
-
-    &-level-3 {
-      width: $cell-pip-max-size / 3;
-      height: ceil($cell-pip-max-thickness / 3);
-    }
-  }
-
-  &__grid-cell-label {
-    position: absolute;
-    font-size: $cell-label-font-size;
-    padding: $cell-label-font-size / 4 $cell-label-font-size / 2;
-  }
-
-  &_horizontal #{&}__grid-cell-label {
-    top: $cell-pip-max-size + $cell-label-offset;
-    transform: translateX(-50%);
-  }
-
-  &_vertical #{&}__grid-cell-label {
-    left: $cell-pip-max-size + $cell-label-offset;
-    transform: translateY(-50%);
-  }
+  @import '../components/axis/axis';
+  @import '../components/track/track';
+  @import '../components/interval/interval';
+  @import '../components/handle/handle';
+  @import '../components/tooltip/tooltip';
+  @import '../components/grid/grid';
+  @import '../components/grid/cell';
 }
