--- a/src/components/grid/_grid.scss
+++ b/src/components/grid/_grid.scss
@@ -2,23 +2,31 @@ $grid-bg: $color-primary-dark !default;
 $grid-offset: $base-size * 1.3 !default;
 $grid-thickness: $base-size / 15 !default;
 
-@include element('grid') {
+&__grid {
   position: relative;
-  background: $grid-bg;
+  display: flex;
+}
 
-  @include modifier('horizontal') {
-    width: 100%;
-    top: $grid-offset;
-    height: $grid-thickness;
-  }
+&_horizontal #{&}__grid {
+  width: 100%;
+  margin-top: $grid-offset;
+  flex-direction: column;
+}
 
-  @include modifier('vertical') {
-    height: 100%;
-    width: $grid-thickness;
-    transform: translateX($grid-offset * 1.2);
-  }
+&_vertical #{&}__grid {
+  height: 100%;
+  transform: translateX($grid-offset * 1.2);
+}
 
-  @include modifier('is-hidden') {
-    display: none;
-  }
+&__grid-line {
+  background: $grid-line-bg;
+}
+
+&_horizontal #{&}__grid-line {
+  height: $grid-line-thickness;
+}
+
+&_vertical #{&}__grid-line {
+  width: $grid-line-thickness;
+  height: 100%;
 }
