--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -8,43 +8,46 @@ $tooltip-radius: $base-size / 3 !default;
 $tooltip-font-size: $base-size !default;
 $tooltip-text-color: $color-secondary-text !default;
 
-@include element('tooltips') {
-  position: absolute;
-
-  @include modifier('horizontal') {
-    width: 100%;
-  }
-
-  @include modifier('vertical') {
-    height: 100%;
-  }
+&__tooltips {
+  position: relative;
 }
 
-@include element('tooltip') {
+&_horizontal #{&}__tooltips {
+  width: 100%;
+  height: $tooltip-max-height;
+  margin-bottom: $tooltip-offset;
+}
+
+&_vertical #{&}__tooltips {
+  width: $tooltip-max-width;
+  height: 100%;
+  margin-right: $tooltip-offset;
+}
+
+&__tooltip {
   position: absolute;
   padding: $tooltip-padding;
   background: $tooltip-bg;
   border: $tooltip-border-width $tooltip-border-style $tooltip-border-color;
-  bottom: $tooltip-offset;
   border-radius: $tooltip-radius;
   font-size: $tooltip-font-size;
   color: $tooltip-text-color;
+  text-align: center;
+}
 
-  @include modifier('horizontal') {
-    transform: translateX(-50%);
-  }
+&__tooltip_has-collisions {
+  opacity: 0;
+  z-index: -10;
+}
 
-  @include modifier('vertical') {
-    transform: translateY(50%)
-      translateX(calc(#{- $tooltip-offset * 1.2} - 50%));
-  }
+&_horizontal #{&}__tooltip {
+  transform: translateX(-50%);
+  max-height: $tooltip-max-height;
+  bottom: 0;
+}
 
-  @include modifier('is-hidden') {
-    display: none;
-  }
-
-  @include modifier('has-collisions') {
-    opacity: 0;
-    z-index: -10;
-  }
+&_vertical #{&}__tooltip {
+  transform: translateY(50%);
+  max-width: $tooltip-max-width;
+  right: 0;
 }
