--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -1,113 +1,1 @@
-code {
-  padding: 0.2rem 0.3rem;
-  border-radius: 4px;
-  background: #efefef;
-}
-
-.example {
-  display: flex;
-  padding: 2rem 1rem;
-  margin-bottom: 3rem;
-
-  &_vertical {
-    height: 20rem;
-  }
-}
-
-.rs-panel {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-
-  &__result {
-    border: 1px solid lightgray;
-    padding: 0.5rem;
-    flex: 0 0 auto;
-    align-self: flex-end;
-    margin-bottom: 2rem;
-  }
-
-  &__result-input {
-    height: 1.4rem;
-    font-size: 1.2rem;
-    margin-left: 0.5rem;
-  }
-}
-
-.config-panel {
-  border: 1px solid gray;
-  padding: 0.5rem 0;
-  width: 30%;
-
-  &__header {
-    text-align: center;
-  }
-
-  &__control {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem 1rem;
-
-    &_hidden {
-      display: none;
-    }
-  }
-
-  &__label {
-    width: 7rem;
-    flex-shrink: 0;
-  }
-
-  &__input {
-    width: 100%;
-    height: 1.4rem;
-    font-size: 1.2rem;
-  }
-
-  &__select {
-    width: 100%;
-    height: 1.4rem;
-  }
-
-  &__textarea {
-    width: 100%;
-  }
-
-  &__submit {
-    width: 100%;
-    padding: 0.3rem;
-    font-size: 1.2rem;
-  }
-
-  &__group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-
-  &__group-item {
-    display: flex;
-    width: 100%;
-    margin-bottom: 0.5rem;
-
-    &-label {
-      display: flex;
-      align-items: center;
-      margin-right: 0.5rem;
-    }
-
-    &-input {
-      height: 1.4rem;
-      flex: 1;
-    }
-
-    &-checkbox {
-      margin-right: 1rem;
-    }
-
-    &-btn {
-      margin-left: 0.3rem;
-    }
-  }
-}
+@import './examples/style.scss';
