Refactor demo examples

--- a/demo/examples/date/date.pug
+++ b/demo/examples/date/date.pug
@@ -4,7 +4,7 @@ mixin date(id)
     const targetId = `${id}-target`;
     const resultId = `${id}-result`;
 
-  h2.example__title Date Example
+  h2.example__title Working with dates
   div(class="example", id=rootId)
     .config-panel
     .rs-panel
