--- a/demo/index.pug
+++ b/demo/index.pug
@@ -13,5 +13,7 @@ html
 
   block content
     include examples/basic/basic.pug
+    include examples/date/date.pug
 
     +basic('basic')
+    +date('date')
