--- a/demo/examples/style.scss
+++ b/demo/examples/style.scss
@@ -59,7 +59,9 @@ code {
   }
 
   &__input {
-    max-width: 5rem;
+    min-width: 5rem;
+    max-width: 10rem;
+    width: 100%;
   }
 
   &__select {
