--- a/demo/examples/style.scss
+++ b/demo/examples/style.scss
@@ -19,6 +19,7 @@ code {
   flex: 1;
   display: flex;
   flex-direction: column;
+  padding: 0 50px;
 
   &__result {
     border: 1px solid lightgray;
@@ -37,7 +38,7 @@ code {
 .config-panel {
   border: 1px solid gray;
   padding: 0.5rem 0;
-  min-width: 30%;
+  width: 400px;
 
   &__header {
     text-align: center;
