Add fractions example

--- a/demo/index.pug
+++ b/demo/index.pug
@@ -17,3 +17,4 @@ html
 
     +example('base-example', 'Working with numbers')
     +example('date-example', 'Working with dates')
+    +example('fraction-example', 'Working with fractions')
