Add example to work with negative numbers

--- a/demo/index.pug
+++ b/demo/index.pug
@@ -18,3 +18,4 @@ html
     +example('base-example', 'Working with numbers')
     +example('date-example', 'Working with dates')
     +example('fraction-example', 'Working with fractions')
+    +example('negative-numbers-example', 'Working with negative numbers')
