Add jquery plugin wrapper

--- a/demo/index.pug
+++ b/demo/index.pug
@@ -19,3 +19,7 @@ html
     +example('date-example', 'Working with dates')
     +example('fraction-example', 'Working with fractions')
     +example('negative-numbers-example', 'Working with negative numbers')
+    
+    section.example
+      h2.example__title As jQuery plugin
+      input(type= 'range', class= 'jq-example')
